kubernetes/apps/livekit/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: client-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - "livekit.internal.paulfriedrich.me"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ''
        kind: Service
        name: lk-react
        port: 80
        weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - "livekit-backend.internal.paulfriedrich.me"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - group: ''
        kind: Service
        name: livekit-server
        port: 80
        weight: 1
